# bite-log

./: .gitignore  Cargo.toml  Contributing.md  License.md  Readme.md
.github/workflows/: ci.yml
src/: database.rs  entry.rs  lib.rs  main.rs
src/database/: abstraction.rs  mod.rs  models.rs  schema.rs
src/database/sql/: down.sql  up.sql
src/db_bonsaidb/: models.rs
src/db_diesel/: mod.rs  up.sql
src/db_rusqlite/: database.rs  entry.rs  mod.rs  traits.rs
