[package]
name = "bite-log"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["sqlite"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
bonsaidb = { version = "0.4.1", features = ["local"] }
serde = "1.0.157"